--- a/tema_de_color.html
+++ b/tema_de_color.html
@@ -299,31 +299,31 @@
     <!-- peliculas - inicio -->
     <section class="   bg-transparent  mt-3">
         <div class="container py-2 h-flex  shadow  ">
-
+            <!-- cartel 1 - incio -->
             <div class="row">
                 <div class="col col-10  m-auto mt-2">
                     <div class="card mb-3 shadow p-1">
-                        <div class="row g-0">
+                        <div class="row g-0  ">
                             <div class="col-md-5 m-auto">
                                 <img src="https://cdn.apis.cineplanet.com.pe/CDN/media/entity/get/FilmPosterGraphic/HO00001379?referenceScheme=HeadOffice&allowPlaceHolder=true" class="img-fluid rounded" alt="...">
                                 <h5 class="card-title text-center m-1 p-3" style="background-color:darkgrey ;">
                                     <b>CARTEL NRO 1</b></h5>
                             </div>
-                            <div class="col-md-7">
+                            <div class="col-md-7 p-2">
                                 <div class="card-body">
                                     <h3 class="card-title " style="color:#004A8C"><b>Jeepers Creepers</b></h3>
                                     <p class="card-text   text-dark"><b>Terror, 1h 30min, +14.</b></p>
                                     <h5 class="card-title     text-dark"><b style="color:#004A8C">Sinopsis</b></h5>
-                                    <p class="card-text">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
+                                    <p class="card-text  fs-5">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
 
-                                    <h5 class="card-title     text-dark"><b>Director</b></h5>
+                                    <h5 class="card-title      " style="color:#004A8C"><b>Director</b></h5>
 
-                                    <p class="card-text"><small class="text-muted">Timo Vuorensola</small></p>
+                                    <p class="card-text"><small class="text-muted fs-5">Timo Vuorensola</small></p>
 
                                 </div>
                                 <div>
                                     <div class="row m-auto  ">
-                                        <h5 class="card-title     text-dark"><b>Horarios</b></h5>
+                                        <h5 class="card-title      " style="color:#004A8C"><b>Horarios</b></h5>
                                     </div>
                                     <div class="row m-auto text-center">
 
@@ -343,6 +343,195 @@
                     </div>
                 </div>
             </div>
+            <!-- cartel 1 - fin -->
+            <!-- cartel 2 - incio -->
+            <div class="row">
+                <div class="col col-10  m-auto mt-2">
+                    <div class="card mb-3 shadow p-1">
+                        <div class="row g-0  ">
+                            <div class="col-md-5 m-auto">
+                                <img src="https://cdn.apis.cineplanet.com.pe/CDN/media/entity/get/FilmPosterGraphic/HO00001379?referenceScheme=HeadOffice&allowPlaceHolder=true" class="img-fluid rounded" alt="...">
+                                <h5 class="card-title text-center m-1 p-3" style="background-color:darkgrey ;">
+                                    <b>CARTEL NRO 2<BR>PROTANOPIA</b></h5>
+                            </div>
+                            <div class="col-md-7 p-2">
+                                <div class="card-body">
+                                    <h3 class="card-title " style="color:#143999"><b>Jeepers Creepers</b></h3>
+                                    <p class="card-text   " style="color:#505312"><b>Terror, 1h 30min, +14.</b></p>
+                                    <h5 class="card-title      "><b style="color:#143999">Sinopsis</b></h5>
+                                    <p class="card-text fs-5" style="color:#505312">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
+
+                                    <h5 class="card-title    " style="color:#143999"><b>Director</b></h5>
+
+                                    <p class="card-text" style="color:#505312"><small class="text-muted fs-5">Timo Vuorensola</small></p>
+
+                                </div>
+                                <div>
+                                    <div class="row m-auto  ">
+                                        <h5 class="card-title      " style="color:#143999"><b>Horarios</b></h5>
+                                    </div>
+                                    <div class="row m-auto text-center">
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>2 PM</b><br><b>DOBLADA</b></a></div>
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>8 PM</b><br><b>SUB TIT.</b></a></div>
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>10 PM</b><BR><b>DOBLADA</b></a></div>
+                                    </div>
+                                </div>
+                                <div class="row m-auto text-center mt-3">
+                                    <div class="col col-4"><a href="#" class="btn " style="background-color: #B39A02;color: #FFFFFF;"><b>COMPRAR</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn  " style="background-color: #014CA7;color: #FFFFFF;"><b>DETALLES</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn btn-dark"><b>UTILIZAR</b></a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- cartel 2 - fin -->
+
+            <!-- cartel 3 - incio -->
+            <div class="row">
+                <div class="col col-10  m-auto mt-2">
+                    <div class="card mb-3 shadow p-1">
+                        <div class="row g-0  ">
+                            <div class="col-md-5 m-auto">
+                                <img src="https://cdn.apis.cineplanet.com.pe/CDN/media/entity/get/FilmPosterGraphic/HO00001379?referenceScheme=HeadOffice&allowPlaceHolder=true" class="img-fluid rounded" alt="...">
+                                <h5 class="card-title text-center m-1 p-3" style="background-color:darkgrey ;">
+                                    <b>CARTEL NRO 3<BR>DEUTERANOPIA</b></h5>
+                            </div>
+                            <div class="col-md-7 p-2">
+                                <div class="card-body">
+                                    <h3 class="card-title " style="color:#554989"><b>Jeepers Creepers</b></h3>
+                                    <p class="card-text   " style="color:#0078CE"><b>Terror, 1h 30min, +14.</b></p>
+                                    <h5 class="card-title      "><b style="color:#554989">Sinopsis</b></h5>
+                                    <p class="card-text fs-5" style="color:#675644">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
+
+                                    <h5 class="card-title    " style="color:#554989"><b>Director</b></h5>
+
+                                    <p class="card-text" style="color:#675644"><small class="text-muted fs-5">Timo Vuorensola</small></p>
+
+                                </div>
+                                <div>
+                                    <div class="row m-auto  ">
+                                        <h5 class="card-title      " style="color:#554989"><b>Horarios</b></h5>
+                                    </div>
+                                    <div class="row m-auto text-center">
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>2 PM</b><br><b>DOBLADA</b></a></div>
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>8 PM</b><br><b>SUB TIT.</b></a></div>
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>10 PM</b><BR><b>DOBLADA</b></a></div>
+                                    </div>
+                                </div>
+                                <div class="row m-auto text-center mt-3">
+                                    <div class="col col-4"><a href="#" class="btn " style="background-color: #B88100;color: #FFFFFF;"><b>COMPRAR</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn  " style="background-color: #007FD8;color: #FFFFFF;"><b>DETALLES</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn btn-dark"><b>UTILIZAR</b></a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- cartel 3 - fin -->
+
+            <!-- cartel 4 - incio -->
+            <div class="row">
+                <div class="col col-10  m-auto mt-2">
+                    <div class="card mb-3 shadow p-1">
+                        <div class="row g-0  ">
+                            <div class="col-md-5 m-auto">
+                                <img src="https://cdn.apis.cineplanet.com.pe/CDN/media/entity/get/FilmPosterGraphic/HO00001379?referenceScheme=HeadOffice&allowPlaceHolder=true" class="img-fluid rounded" alt="...">
+                                <h5 class="card-title text-center m-1 p-3" style="background-color:darkgrey ;">
+                                    <b>CARTEL NRO 4<BR>TRITANOPIA</b></h5>
+                            </div>
+                            <div class="col-md-7 p-2">
+                                <div class="card-body">
+                                    <h3 class="card-title " style="color:#781518"><b>Jeepers Creepers</b></h3>
+                                    <p class="card-text   " style="color:#00A3AF"><b>Terror, 1h 30min, +14.</b></p>
+                                    <h5 class="card-title      "><b style="color:#5A474D">Sinopsis</b></h5>
+                                    <p class="card-text fs-5" style="color:#675644">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
+
+                                    <h5 class="card-title    " style="color:#5A474D"><b>Director</b></h5>
+
+                                    <p class="card-text" style="color:#5A474D"><small class="text-muted fs-5">Timo Vuorensola</small></p>
+
+                                </div>
+                                <div>
+                                    <div class="row m-auto  ">
+                                        <h5 class="card-title      " style="color:#5A474D"><b>Horarios</b></h5>
+                                    </div>
+                                    <div class="row m-auto text-center">
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>2 PM</b><br><b>DOBLADA</b></a></div>
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>8 PM</b><br><b>SUB TIT.</b></a></div>
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>10 PM</b><BR><b>DOBLADA</b></a></div>
+                                    </div>
+                                </div>
+                                <div class="row m-auto text-center mt-3">
+                                    <div class="col col-4"><a href="#" class="btn " style="background-color: #FF282B;color: #FFFFFF;"><b>COMPRAR</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn  " style="background-color: #025F64;color: #FFFFFF;"><b>DETALLES</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn btn-dark"><b>UTILIZAR</b></a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- cartel 4 - fin -->
+
+            <!-- cartel 5 - incio -->
+            <div class="row">
+                <div class="col col-10  m-auto mt-2">
+                    <div class="card mb-3 shadow p-1">
+                        <div class="row g-0  ">
+                            <div class="col-md-5 m-auto">
+                                <img src="https://cdn.apis.cineplanet.com.pe/CDN/media/entity/get/FilmPosterGraphic/HO00001379?referenceScheme=HeadOffice&allowPlaceHolder=true" class="img-fluid rounded" alt="...">
+                                <h5 class="card-title text-center m-1 p-3" style="background-color:darkgrey ;">
+                                    <b>CARTEL NRO 5<BR>ACROMATÍA</b></h5>
+                            </div>
+                            <div class="col-md-7 p-2">
+                                <div class="card-body">
+                                    <h3 class="card-title " style="color:#000000"><b>Jeepers Creepers</b></h3>
+                                    <p class="card-text   " style="color:#222222"><b>Terror, 1h 30min, +14.</b></p>
+                                    <h5 class="card-title      "><b style="color:#                                    <h3 class=" card-title " style="color:#000000 "><b>Jeepers Creepers</b></h3>
+">Sinopsis</b>
+                                    </h5>
+                                    <p class="card-text fs-5" style="color:#545454">Obligada a viajar con su novio, Laine, comienza a experimentar premoniciones asociadas con el mito urbano de The Creeper. Laine cree que se ha convocado algo sobrenatural, y que ella está en el centro de todo.</p>
+
+                                    <h5 class="card-title    " style="color:#000000"><b>Director</b></h5>
+
+                                    <p class="card-text" style="color:#545454"><small class="text-muted fs-5">Timo Vuorensola</small></p>
+
+                                </div>
+                                <div>
+                                    <div class="row m-auto  ">
+                                        <h5 class="card-title      " style="color:#000000"><b>Horarios</b></h5>
+                                    </div>
+                                    <div class="row m-auto text-center">
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>2 PM</b><br><b>DOBLADA</b></a></div>
+
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>8 PM</b><br><b>SUB TIT.</b></a></div>
+                                        <div class="col col-4 "><a href="#" class="btn btn-none border border-2 border-secondary"><b>10 PM</b><BR><b>DOBLADA</b></a></div>
+                                    </div>
+                                </div>
+                                <div class="row m-auto text-center mt-3">
+                                    <div class="col col-4"><a href="#" class="btn " style="background-color: #545454;color: #FFFFFF;"><b>COMPRAR</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn  " style="background-color: #000000;color: #FFFFFF;"><b>DETALLES</b></a></div>
+                                    <div class="col col-4"><a href="#" class="btn btn-dark"><b>UTILIZAR</b></a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- cartel 5 - fin -->
+
+
+
         </div>
 
     </section>
