--- a/tema_de_color.html
+++ b/tema_de_color.html
@@ -279,7 +279,7 @@
                             </div>
                             <div class="card-body">
 
-                                <p class="card-text  text-wrap">Vea atentamente el cartel de al lado, revise el contenido, y verifique cual de los otros carteles le resulta más fácil leer el contenido. <br>De esa forma se cambiará las fuentes de color de la página web para que sea más
+                                <p class="card-text  text-wrap fs-5">Vea atentamente el cartel de al lado, revise el contenido, y verifique cual de los otros carteles le resulta más fácil leer el contenido. <br>De esa forma se cambiará las fuentes de color de la página web para que sea más
                                     amigable para usted.<br><br> Al encontrar la opción debe hacer clic en <b>"UTILIZAR"</b>. </p>
 
                             </div>
