--- a/seleccionar_cantidad_de_entradas.html
+++ b/seleccionar_cantidad_de_entradas.html
@@ -247,7 +247,11 @@
                                 <div class="alert alert-warning" role="alert">
                                     * Esta pelicula está clasificada para mayoes de 14 años, no se permite niños.
                                 </div>
-
+                                <div class="mt-3">
+                                    <div class="  "><button type="button" class="btn btn-danger btn-lg"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16">
+                                        <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"/>
+                                      </svg> COMPRAR</button></div>
+                                </div>
                             </div>
                         </div>
 
